--- a/3dprinting.html
+++ b/3dprinting.html
@@ -83,7 +83,7 @@
                     <hr>
                     <br>
                     <section id="blog-list">
-                        <a href="/customfunkopops" class="item-link">
+                        <a href="/3dprinting/customfunkopops" class="item-link">
                             <picture class="item-link-image">
                                 <img alt="funko pop image" height="60" width="60" src="images/funkopops/funko-pop-front.png">
                             </picture>
