--- a/photography.html
+++ b/photography.html
@@ -85,7 +85,7 @@
                     <hr>
                     <br>
                     <section id="blog-list">
-                        <a href="/startrails" class="item-link">
+                        <a href="/photography/startrails" class="item-link">
                             <picture class="item-link-image">
                                 <img alt="startrails image" height="60" width="60" src="images/startrails/edited and combined.png">
                             </picture>
