--- a/3dprinting/customfunkopops.html
+++ b/3dprinting/customfunkopops.html
@@ -222,7 +222,7 @@
                             <img alt="The back and side of a custom funko pop box with a small picture of a cat on it" height="300" width="375" src="/images/funkopops/box-back-bluebg.jpg">
                         </picture>
                         <p>
-                            And there we go! The project is finished! If you have any questions don't hesitate to send me an email, my contact details can be found at the bottom of the page. Feel free to check out some of my other projects, such as my recent startrails endeavour which can be found <a href="/startrails">here!</a>
+                            And there we go! The project is finished! If you have any questions don't hesitate to send me an email, my contact details can be found at the bottom of the page. Feel free to check out some of my other projects, such as my recent startrails endeavour which can be found <a href="/photography/startrails">here!</a>
                         </p>
                         <picture class="blog-images">
                             <img alt="Finished custom funko pop model in a box, alongside an image of the same model outside of the box" height="300" width="375" src="/images/funkopops/finished-thing-sidebyside.jpg">
