--- a/photography/startrails.html
+++ b/photography/startrails.html
@@ -287,7 +287,7 @@
                                 <img alt="a finished startrails image with a visible foreground" height="300" src="/images/startrails/edited and combined.png">
                             </picture>
                             <p>
-                                There we go your startrails image is complete! If you have any questions don't hesitate to send me an email, my contact details can be found at the bottom of the page. Feel free to check out some of my other projects, such as when I made a <a href="/customfunkopops">custom Funko Pop model!</a>
+                                There we go your startrails image is complete! If you have any questions don't hesitate to send me an email, my contact details can be found at the bottom of the page. Feel free to check out some of my other projects, such as when I made a <a href="/3dprinting/customfunkopops">custom Funko Pop model!</a>
                             </p>
                         </section>     
                     </section>
