--- a/photography/startrails.html
+++ b/photography/startrails.html
@@ -33,7 +33,7 @@
             <a href="/">THE MAKER'S LENS</a>
             </div>
             <div class="Navbar__Link Navbar__Link-toggle">
-                <img src="/images/assets/white-bars-solid.svg" height="15px" width="15px">
+                <img src="./images/assets/white-bars-solid.svg" height="15px" width="15px">
             </div>
         <!--<nav class="Navbar__Items">
             <div class="Navbar__Link">
