--- a/photography/startrails.html
+++ b/photography/startrails.html
@@ -33,7 +33,7 @@
             <a href="/">THE MAKER'S LENS</a>
             </div>
             <div class="Navbar__Link Navbar__Link-toggle">
-                <img src="./images/assets/white-bars-solid.svg" height="15px" width="15px">
+                <img src="/images/assets/white-bars-solid.svg" height="15px" width="15px">
             </div>
         <!--<nav class="Navbar__Items">
             <div class="Navbar__Link">
@@ -322,6 +322,6 @@
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="nav.js"></script>
+    <script type="text/javascript" src="/nav.js"></script>
 </body>
 </html>
