--- a/3dprinting/customfunkopops.html
+++ b/3dprinting/customfunkopops.html
@@ -258,6 +258,6 @@
         </p>
     </footer>
 
-    <script type="text/javascript" src="nav.js"></script>
+    <script type="text/javascript" src="/nav.js"></script>
 </body>
 </html>
